ultimas alterações na rota get/movies
